# DPPCMakeTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  example_vscode_launch_configuration.json  vcpkg.json
.github/: dependabot.yml
.github/workflows/: cmake-build.yml
cmake/: dpp.cmake
include/mybot/: mybot.h
src/: CMakeLists.txt  main.cpp
